# fastapi

./: .gitignore  main.py  pyproject.toml  test_fastapi.py
.github/workflows/: pipelines.yaml
fast_zero/: compose.yml  conftest.py  pyproject.toml
fast_zero/.github/workflows/: pipelines.yaml
fast_zero/fast_zero/: app.py  models.py  schemas.py  security.py  settings.py
fast_zero/fast_zero/routers/: auth.py  todo.py  users.py
fast_zero/migrations/versions/: 46fcee8c692c_add_created_at.py  bb4ef0d449c6_table_users.py  db4b4cc1526a_create_todos_table.py
fast_zero/tests/: conftest.py  test_app.py  test_auth.py  test_security.py  test_users.py
fastapi/: Dockerfile  database.py  main.py  serializer.py  settings.py
fastapi/fastapi/: __init__.py  schemas.py  security.py
fastapi/migrations/: env.py
fastapi/routers/: users.py
fastapi/tests/: test_model.py  test_security.py  test_users.py
migrations/versions/: 46fcee8c692c_add_created_at.py
tests/: conftest.py  test_todo.py
